prevent displaylist panel to show unnecessary scrollbar in firefox

--- a/examples/inspector/style/style.css
+++ b/examples/inspector/style/style.css
@@ -133,6 +133,7 @@ body.simple #xstats {
   color: #ccc;
   font: 10px Consolas, "Liberation Mono", Courier, monospace;
   cursor: default;
+  overflow-y: hidden;
 }
 #displayList {
   position: absolute;
